<resources>
    <string name="app_name">Stop Watch</string>
    <string name="start">Start</string>
    <string name="stopwatchclock">stopWatchClock</string>
    <string name="clocktext">clockText</string>
    <string name="reset">Reset</string>
    <string name="clock">Clock</string>
    <string name="lap">Lap</string>
    <string name="alarm">Alarm</string>
    <string name="alarmclock">alarmClock</string>
    <string name="title_activity_alarm">AlarmActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="lapimageview">lapImageView</string>
</resources>
